css/forgotten_overlay.css
* {
    box-sizing: border-box;
}

body {
	color: #DED7BE;
	text-shadow: -1px 0 2px #795516, 0 1px 2px #795516, 1px 0 2px #795516, 0 -1px 2px #795516;
	font-weight: 300;
	white-space: nowrap;
}

.encounter {
    align-content: center;
    text-align: center;
}

.wrapper {
    display: flex;
    justify-content: center;
}

.bottom {
    width: 100%;
    padding-left: 5px;
    padding-right: 5px;
    display: flex;
    justify-content: space-between;
}

.table {
    border: 2px solid;
    margin: 5px;
    width: 150px;
    font-size: 14px;
    display: flex;
    flex-wrap: wrap;
}

.table-name {
    display: flex;
    padding: 3px;
}

.table-pic {
    align-content: center;
    width: 50%;
}

.table-dps {
    text-align: left;
}

.table-stats {
    text-align: right;
}

.job-image {
    padding-right: 10px;
    width: 27px;
    height: 17px;
}

.blur {
    width: 100px;
    overflow: hidden;
    text-overflow: ellipsis;
    filter: blur(3px);
    -webkit-filter: blur(3px);
}

.noblur {
    width: 100px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.deth {
    width: 13px;
    text-align: right;
    font-weight: 900;
	color: #ffcdd2 !important;
	text-shadow: -1px 0 3px #fc5161, 0 1px 3px #fc5161, 1px 0 3px #fc5161, 0 -1px 3px #fc5161 !important;
}

